--- a/source/Firebase/Invites/Invites.csproj
+++ b/source/Firebase/Invites/Invites.csproj
@@ -19,7 +19,7 @@
     <Authors>Microsoft</Authors>
     <Owners>Microsoft</Owners>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <PackageIconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosinvites_128x128.png</PackageIconUrl>
+    <PackageIcon>firebaseiosinvites_128x128.png</PackageIcon>
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865563</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -37,6 +37,7 @@
   <ItemGroup>
     <None Include="Invites.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.Invites.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
+    <None Include="../../../icons/firebaseiosinvites_128x128.png" Pack="True" PackagePath="firebaseiosinvites_128x128.png" />
   </ItemGroup>
 
   <ItemGroup>
