--- a/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.csproj
+++ b/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.csproj
@@ -19,7 +19,7 @@
     <Authors>Microsoft</Authors>
     <Owners>Microsoft</Owners>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <PackageIconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosmlkitmodelinterpreter_128x128.png</PackageIconUrl>
+    <PackageIcon>firebaseiosmlkitmodelinterpreter_128x128.png</PackageIcon>
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2028942</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -37,6 +37,7 @@
   <ItemGroup>
     <None Include="MLKit.ModelInterpreter.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.MLKit.ModelInterpreter.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
+    <None Include="../../../icons/firebaseiosmlkitmodelinterpreter_128x128.png" Pack="True" PackagePath="firebaseiosmlkitmodelinterpreter_128x128.png" />
   </ItemGroup>
 
   <ItemGroup>
