--- a/source/Google/Maps/Maps.csproj
+++ b/source/Google/Maps/Maps.csproj
@@ -19,7 +19,7 @@
     <Authors>Microsoft</Authors>
     <Owners>Microsoft</Owners>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <PackageIconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosmaps_128x128.png</PackageIconUrl>
+    <PackageIcon>googleiosmaps_128x128.png</PackageIcon>
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=865548</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -37,6 +37,7 @@
   <ItemGroup>
     <None Include="Maps.targets" Pack="True" PackagePath="build/Xamarin.Google.iOS.Maps.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
+    <None Include="../../../icons/googleiosmaps_128x128.png" Pack="True" PackagePath="googleiosmaps_128x128.png" />
   </ItemGroup>
 
   <ItemGroup>
